# cobyqa

./: .codecov.yml  .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  README.rst  codecov.yml  meson.build  pyproject.toml  pytest.ini  setup.py  test.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.yml  feature_request.yml
.github/actions/compare/: bound_constrained.py  compare.sh  install-cobyqa-latest.sh  install-cutest.sh  linearly_constrained.py  nonlinearly_constrained.py  rename.sh  setup.sh  unconstrained.py
.github/actions/pypi/: download_anaconda.sh
.github/actions/spelling/: README.md  allow.txt  excludes.txt  expect.txt  patterns.txt
.github/actions/test/: run_test.sh  test.py
.github/workflows/: benchmarking.yml  build.yml  codecov.yml  codeql.yml  compare.yml  coverage.yml  license.yml  lint.yml  pypi.yml  spelling.yml  test.yml  wheels.yml
benchmark/: run.py
benchmark/profiles/: __init__.py  optimize.py  problems.py  profiles.py  utils.py
benchmarking/: requirements.txt  run.py
benchmarking/profiles/: __init__.py  logging.py  optimize.py  problems.py  profiles.py  utils.py
benchmarks/: bound_constrained.py  linearly_constrained.py  nonlinearly_constrained.py  unconstrained.py
benchmarks/profiles/: optimize.py  profiles.py  utils.py
build_tools/circle/: build-test.sh  test.sh
build_tools/github/: build_coverage.sh  build_package.sh  build_source.sh  build_wheels.sh  coverage.sh  download_anaconda.sh  generate_coverage.sh  repair_windows_wheels.sh  run_benchmark.sh  test_source.sh  test_wheels.sh  upload_anaconda.sh
cobyqa/: __init__.py  _min_dependencies.py  _models.py  framework.py  main.py  models.py  optimize.py  problem.py  settings.py  setup.py  structs.py  utils.py
cobyqa/_build_utils/: __init__.py
cobyqa/linalg/: __init__.py  _bvcs.pyx  _bvlag.pyx  _bvtcg.pyx  _cpqp.pyx  _lctcg.pyx  _nnls.pyx  _utils.pxd  _utils.pyx  base.pyx  bvcs.py  bvlag.py  bvtcg.py  cblas.pxd  clapack.pxd  clinalg.c  clinalg.pyx  cpqp.py  lctcg.py  main.py  nnls.py  setup.py  utils.py
cobyqa/linalg/tests/: test_decomp.py  test_geometry.py  test_linalg.py  test_optimize.py
cobyqa/subproblems/: __init__.py  geometry.py  trust_region.py
cobyqa/subsolvers/: __init__.py  geometry.py  optim.py
cobyqa/subsolvers/tests/: test_geometry.py  test_optim.py
cobyqa/tests/: __init__.py  test_cobyqa.py  test_main.py  test_models.py  test_problem.py  test_utils.py
cobyqa/utils/: __init__.py  _min_dependencies.py  _show_versions.py  exceptions.py  math.py  maths.py  structs.py  versions.py
cobyqa/utils/tests/: test_exceptions.py  test_math.py  test_maths.py  test_structs.py
doc/: Makefile
doc/source/: conf.py  index.rst  license.rst
doc/source/_static/: cobyqa.bib  cobyqa.css  custom-icons.js  switcher.json
doc/source/_templates/autosummary/: attribute.rst  base.rst  class.rst  method.rst
doc/source/algorithms/: index.rst
doc/source/dev/: framework.rst  index.rst  models.rst  problem.rst  subsolvers.rst  utils.rst
doc/source/ref/: index.rst  solver.rst
doc/source/reference/: index.rst  optimize.rst  subproblems.rst
doc/source/user/: framework.rst  index.rst  installation.rst  releases.rst  subsolvers.rst  usage.rst
docs/: Makefile  requirements.txt
docs/source/: bugs.rst  cite.rst  conf.py  index.rst  license.rst
docs/source/_static/: cobyqa-refs.bib  cobyqa-strings.bib  cobyqa.css  switcher.json
docs/source/_static/logo/: logo.tex
docs/source/_static/logo/fonts/: README.txt
docs/source/_templates/: index.html  layout.html
docs/source/_templates/autosummary/: attribute.rst  base.rst  class.rst  method.rst  module.rst
docs/source/algo/: index.rst  linalg.altmov.rst  linalg.bvtcg.rst  linalg.cpqp.rst  linalg.lctcg.rst  linalg.nnls.rst  linalg.rst  optimize.rst
docs/source/refs/: index.rst  linalg.rst  optimize.rst  tests.rst
examples/: feasibility.py  powell.py  powell1994.py  powell2015.py  quadratic.py  rosenbrock.py
