project(
  'cobyqa',
  version: '1.1.3',
  license: 'BSD-3-Clause',
  license_files: 'LICENSE',
)

sources = {
  'cobyqa': files(
    'cobyqa/__init__.py',
    'cobyqa/framework.py',
    'cobyqa/main.py',
    'cobyqa/models.py',
    'cobyqa/problem.py',
    'cobyqa/settings.py',
  ),

  'cobyqa/subsolvers': files(
    'cobyqa/subsolvers/__init__.py',
    'cobyqa/subsolvers/geometry.py',
    'cobyqa/subsolvers/optim.py',
  ),

  'cobyqa/utils': files(
    'cobyqa/utils/__init__.py',
    'cobyqa/utils/exceptions.py',
    'cobyqa/utils/math.py',
    'cobyqa/utils/versions.py',
  ),
}
